codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__feedback_note_view__tests__feedback_multiline_paste.snap
---
source: tui/src/bottom_pane/feedback_note_view_tests.rs
expression: "render(&view, 60)"
---
▌ Tell us more (bug)
▌
▌ Your feedback can be used to improve ChatGPT. Learn more.
▌
▌ foo
▌ bar

按  enter to submit， 或 按  esc to cancel
